INT-14682: Intellicart overlap issue fixed

--- a/scss/_plugins.scss
+++ b/scss/_plugins.scss
@@ -133,6 +133,10 @@
         height: auto;
         color: $nav-color;
     }
+
+    .popover-region-container {
+        top: 2.5rem;
+    }
 }
 
 #mr-nav .popover-region-container .intellicart-footer a {
